--- a/style.css
+++ b/style.css
@@ -64,15 +64,16 @@ nav li
 nav a
 {
 	font-size: 1.3em;
-	color: #ffffff;
+	color: #181818;
 	margin-right: 5px;
 	text-decoration: none;
 }
 
 nav a:hover
 {
-	color: #ffffff;
+	color: #D5F4F3;
 	text-decoration:none; 
+	background:  #D5F4F3;
 }
 
 #buttonHover{
