--- a/style.css
+++ b/style.css
@@ -53,12 +53,14 @@ nav ul
 {
 	list-style-type: none;
 	margin-right: 50px;
+	background-color: transparent;
 }
 
 nav li
 {
 	display: inline-block;
 	margin-right: 5px;
+	background-color: transparent;
 }
 
 nav a
@@ -67,6 +69,7 @@ nav a
 	color: #181818;
 	margin-right: 5px;
 	text-decoration: none;
+	background-color: transparent;
 }
 
 nav a:hover
