--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav ul
 {
 	list-style-type: none;
 	margin-right: 50px;
-	background-color: transparent;
+	background-color: #D5F4F3;;
 }
 
 nav li
