--- a/CSS/main.css
+++ b/CSS/main.css
@@ -171,6 +171,21 @@
   color: black;
 
 }
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
 
 
 /********************************************/
