--- a/CSS/main.css
+++ b/CSS/main.css
@@ -187,6 +187,10 @@ li a:hover {
   background-color: #111;
 }
 
+.dropdown-menus
+{
+  background-color:transparent;
+}
 
 /********************************************/
 /* ==========================================================================
